--- a/Ui/Ui.Desktop/Resources/Styles/TalentsStyle.xaml
+++ b/Ui/Ui.Desktop/Resources/Styles/TalentsStyle.xaml
@@ -1,4 +1,4 @@
-<ResourceDictionary xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+﻿<ResourceDictionary xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls">
     <SolidColorBrush x:Key="ListBox.Static.Background" Color="#FFFFFFFF" />
@@ -10,7 +10,7 @@
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderBrush" Value="{StaticResource ListBox.Static.Border}" />
         <Setter Property="BorderThickness" Value="0" />
-        <Setter Property="Padding" Value="0,0,10,0" />
+        <Setter Property="Padding" Value="0" />
         <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
@@ -64,7 +64,7 @@
     <SolidColorBrush x:Key="Item.SelectedActive.Border" Color="Transparent" />
     <Style x:Key="TalentListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="Margin" Value="0,0,0,3" />
+        <Setter Property="Margin" Value="0" />
         <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderBrush" Value="Transparent" />
