Fixed missing attribute mods

--- a/Ui/Ui.Desktop/Views/CharacterPage.xaml
+++ b/Ui/Ui.Desktop/Views/CharacterPage.xaml
@@ -47,6 +47,13 @@
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
+                        <DataGridTextColumn Header="Mod" Binding="{Binding Path=Mod}" IsReadOnly="True">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="HorizontalAlignment" Value="Right" />
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
                     </DataGrid.Columns>
                 </DataGrid>
 
